# warden

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: treasury-policy.yaml
warden-api/: Cargo.toml
warden-api/src/: auth.rs  handlers.rs  lib.rs  routes.rs  state.rs
warden-api/src/handlers/: address_list.rs  approval.rs  group.rs  health.rs  mod.rs  policy.rs  token.rs
warden-cli/: Cargo.toml
warden-cli/src/: main.rs
warden-cli/src/commands/: approval.rs  group.rs  list.rs  mod.rs  serve.rs
warden-core/: Cargo.toml
warden-core/src/: approval.rs  audit.rs  bundle.rs  callback.rs  compliance.rs  config.rs  context.rs  enclave.rs  entailment.rs  error.rs  escalation.rs  evaluator.rs  group.rs  heartbeat.rs  hierarchy.rs  lib.rs  lifecycle.rs  metrics.rs  notification.rs  pattern.rs  permit.rs  policy.rs  quorum.rs  retry.rs  risk.rs  secrets.rs  ssrf.rs  task.rs  task_handle.rs  velocity.rs  workflow.rs
warden-core/src/backend/: keep.rs  mod.rs
warden-core/src/compliance/: chainalysis.rs  elliptic.rs  handler.rs  mod.rs  retry.rs  types.rs
warden-core/src/notification/: mod.rs  service.rs  store.rs  types.rs
warden-core/src/notification/senders/: email.rs  logging.rs  mod.rs  nostr.rs  slack.rs  webhook.rs
warden-core/src/store/: memory.rs  mod.rs  redb_store.rs
warden-core/tests/: integration.rs
