[workspace]
resolver = "2"
members = ["warden-core", "warden-api", "warden-cli"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
repository = "https://github.com/privkeyio/warden"

[workspace.dependencies]
warden-core = { path = "warden-core" }
warden-api = { path = "warden-api" }

keep-core = { git = "https://github.com/privkeyio/keep", tag = "v0.1.1" }
keep-frost-net = { git = "https://github.com/privkeyio/keep", tag = "v0.1.1" }
keep-enclave-host = { git = "https://github.com/privkeyio/keep", tag = "v0.1.1" }

axum = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
bincode = "1.3"
redb = "2.4"
bitcoin = { version = "0.32", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
async-trait = "0.1"

sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
regex = "1"
base64 = "0.22"
reqwest = { version = "0.12.8", features = ["json"] }
nostr-sdk = { version = "0.38", default-features = false, features = ["nip59"] }
lettre = { version = "0.11", default-features = false, features = ["builder", "hostname", "smtp-transport", "tokio1-rustls-tls"] }
indexmap = "2"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tempfile = "3.10"
directories = "5"
getrandom = "0.2"
secrecy = { version = "0.10", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3
panic = "abort"

