[package]
name = "warden-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
warden-core = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-http = { workspace = true }
tower = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
governor = { workspace = true }

