[package]
name = "warden-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "warden"
path = "src/main.rs"

[dependencies]
warden-core = { workspace = true }
warden-api = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

