[package]
name = "warden-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
keep = ["dep:keep-core", "dep:keep-frost-net", "dep:keep-enclave-host"]

[dependencies]
keep-core = { workspace = true, optional = true }
keep-frost-net = { workspace = true, optional = true }
keep-enclave-host = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
redb = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
bitcoin = { workspace = true }
tokio = { workspace = true }
lettre = { workspace = true }
nostr-sdk = { workspace = true }
directories = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }

