[package]
name = "warden-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = []
keep = ["dep:keep-core", "dep:keep-frost-net", "dep:keep-enclave-host"]
mock = []

[dependencies]
keep-core = { workspace = true, optional = true }
keep-frost-net = { workspace = true, optional = true }
keep-enclave-host = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
redb = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
cms = { workspace = true }
x509-cert = { workspace = true }
der = { workspace = true }
const-oid = { workspace = true }
spki = { workspace = true }
rsa = { workspace = true }
ecdsa = { workspace = true }
p256 = { workspace = true }
p384 = { workspace = true }
signature = { workspace = true }
reqwest = { workspace = true }
regex = { workspace = true }
url = { workspace = true }
indexmap = { workspace = true }
tracing = { workspace = true }
bitcoin = { workspace = true }
tokio = { workspace = true }
lettre = { workspace = true }
nostr-sdk = { workspace = true }
directories = { workspace = true }
base64 = { workspace = true }
getrandom = { workspace = true }
secrecy = { workspace = true }
aws-config = { workspace = true }
aws-sdk-secretsmanager = { workspace = true }
parking_lot = { workspace = true }
chacha20poly1305 = { workspace = true }
zeroize = { workspace = true }
subtle = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = { workspace = true }
warden-core = { path = ".", features = ["mock"] }

